test_samples/invalid/missing_min.zarr/.zattrs
{
    "multiscales": [
        {
            "axes": [
                {
                    "name": "y",
                    "type": "space"
                },
                {
                    "name": "x",
                    "type": "space"
                }
            ],
            "datasets": [
                {
                    "coordinateTransformations": [
                        {
                            "scale": [
                                1.0,
                                1.0
                            ],
                            "type": "scale"
                        }
                    ],
                    "path": "0"
                },
                {
                    "coordinateTransformations": [
                        {
                            "scale": [
                                2.0,
                                2.0
                            ],
                            "type": "scale"
                        }
                    ],
                    "path": "1"
                },
                {
                    "coordinateTransformations": [
                        {
                            "scale": [
                                4.0,
                                4.0
                            ],
                            "type": "scale"
                        }
                    ],
                    "path": "2"
                },
                {
                    "coordinateTransformations": [
                        {
                            "scale": [
                                8.0,
                                8.0
                            ],
                            "type": "scale"
                        }
                    ],
                    "path": "3"
                }
            ],
            "version": "0.4"
        }
    ],
    "omero": {
        "channels": [
            {
                "color": "FF0000",
                "window": {
                    "end": 255,
                    "start": 0
                }
            }
        ],
        "rdefs": {
            "model": "greyscale"
        }
    }
}